--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -29,7 +29,7 @@ definitions:
       script: |
         set -o pipefail
         xcode-project run-tests \
-        --workspace Client.xcworkspace \
+        --project Client.xcodeproj \
         --scheme Debug \
         --device "iPhone 8"
 
